@@ -1,5 +1,6 @@
 0.11.102
 	+ Use the new EBox::Model::Row api
+	+ Add field help to models
 0.11.101
 	+ New release
 0.11.100
